Added pop up form for editing events Co-Authored-By: @bahp